Added Initial Tests

--- a/dist.ini
+++ b/dist.ini
@@ -5,17 +5,26 @@ copyright_holder = William Scherz
 copyright_year   = 2019
 
 [Git::NextVersion]
+[License]
+[CopyFilesFromBuild]
+copy = LICENSE
+[GatherDir]
+exclude_filename = LICENSE
 [PkgVersion]
 [NextRelease]
 [@Git]
-[@Filter]
--bundle = @Basic
--remove = UploadToCPAN
+[@Basic]
 [InstallGuide]
 [Git::Contributors]
+[GithubMeta]
 [MetaConfig]
+[MetaYAML]
 [MetaJSON]
 [PodWeaver]
+[ReadmeAnyFromPod]
+type = pod
+filename = README.pod
+location = root
 [TaskWeaver]
 [AutoPrereqs]
 [MetaTests]
@@ -33,3 +42,4 @@ copyright_year   = 2019
 [Git::CommitBuild]
 [TestRelease]
 [FakeRelease]
+[ConfirmRelease]
